git-svn-id: https://plugins.svn.wordpress.org/twitter-anywhere-plus/trunk@237437 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/lightdiv/lightdiv.css
+++ b/lightdiv/lightdiv.css
@@ -26,7 +26,7 @@
   left: 50%;
   top: 50%;
   margin-left: -283px;
-  margin-top: -147px; /* -90px without bird (centered) */
+  margin-top: -150px; /* -90px without bird (centered) */
   visibility: hidden;
 }
 
@@ -87,8 +87,8 @@
 
 #lightdiv .twitter-bird {
   position: relative;
-  height: 57px;
-  background: url(twitter.png) 400px no-repeat;
+  height: 69px;
+  background: 400px no-repeat;
   margin-bottom: -10px;
 }
 
