git-svn-id: https://plugins.svn.wordpress.org/twitter-anywhere-plus/trunk@260811 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/lightdiv/lightdiv.css
+++ b/lightdiv/lightdiv.css
@@ -92,7 +92,15 @@
   margin-bottom: -10px;
 }
 
-#lightdiv-button-div {
+#lightdiv-button-div-l {
+  float: left;
+  margin-right: 10px;
+  margin-top: 3px;
+  margin-bottom: 3px;
+  clear: both;
+}
+
+#lightdiv-button-div-r {
   float: right;
   margin-left: 10px;
   margin-top: 3px;
